2003 Sep 24  Stefan Urbanek <urbanek@host.sk>
    
    * STEnvironmentDescription: guard initialisation in Autorelease pool

2003 Sep 23  Stefan Urbanek <urbanek@host.sk>

    * STEngine: setValueForOption: added

2003 Aug 13  Stefan Urbanek <urbanek@host.sk>

    * Version 0.8.0

2003 Aug 9  Stefan Urbanek <urbanek@host.sk>

    * Removed compiler warnings in StepTalk.framework, Smalltalk and Tools

2003 Aug 6  Stefan Urbanek <urbanek@host.sk>

    * Frameworks: new directory
    * Changed StepTalk from library to framework
    * Modules: Removed StepTalk module as it is no more needed, because
    we have framework and it can provide scripting capabilities by it self
    * All GNUMakefiles modified to reflect change to Framework
    * Added Framework loading in .stenv description files. 
    Use: Frameworks = (name1, name2);
    
    NOTE: You HAVE to remove your previous installation of StepTalk to be
    able to install new one. (especially Local/Library/Headers/StepTalk).
    
2003 Aug 5  Stefan Urbanek <urbanek@host.sk>
    
    * Added STScriptObject and STMethod.

2003 Jun 15

    * NSInvocation+additions: added unknown selector creation; created a
    workaround for gnustep DO bug
    * STObjCRuntime: Fixed creation of signature.

2003 May 11 Stefan Urbanek <urbanek@host.sk>

    * Fixed linking of some bundles

2003 May 10 Stefan Urbanek <urbanek@host.sk>

    * Fixed linking under mingw32
    * STBundleInfo: implemented framework searching
    * STEnvironment: includeFramework: new method.

2003 May 2   Stefan Urbanek <urbanek@host.sk>

    * STBundleInfo: added objectReferenceDictionary; removed unnecessary ST 
      prefix from ScriptingInfo.plist keys and added warnings for the change.;
      check for existence of ScriptingInfo.plist before using it
    * Modules: reflect changes to STBundleInfo
    * Updated all GNUmakefiles to use new path
    * STEnvironment: added initDefault - this will replace confusing 
      defaultScriptingEnvironment.