@@ -1,0 +1,7 @@
+*.app
+*.debug
+*.profile
+shared_*obj
+*.bundle
+*.stmodule
+*.stlanguage
