@@ -1,0 +1,5 @@
+{
+    ScriptingInfoClass = ReadlineTranscriptModule;
+    Classes = (
+    );
+}
