@@ -1,3 +1,7 @@
+2003 Oct 3   Stefan Urbanek <urbanek@host.sk>
+
+    * Added ReadlineTranscript module (Idea by Alexander Diemand)
+
 2003 Sep 24  Stefan Urbanek <urbanek@host.sk>
     
     * STEnvironmentDescription: guard initialisation in Autorelease pool
